Drop down menu, Navbar Refactor, Middleware protect routes

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,9 @@ h1 {
 strong{
   color: azure!important;
 }
+
+@layer utilities {
+  .nav-link {
+    @apply text-zinc-600 hover:text-zinc-300 transition-colors
+  }
+}
